syntax = "proto3";

package cluster;

option go_package = "github.com/Codesmith28/CloudAI/proto/pb";

service MasterWorker {
  // Worker -> Master
  rpc RegisterWorker(WorkerInfo) returns (RegisterAck);
  rpc SendHeartbeat(Heartbeat) returns (HeartbeatAck);
  rpc ReportTaskCompletion(TaskResult) returns (Ack);
  rpc UploadTaskFiles(stream FileChunk) returns (FileUploadAck);

  // Master -> Worker
  rpc MasterRegister(MasterInfo) returns (RegisterAck);
  rpc AssignTask(Task) returns (TaskAck);
  rpc CancelTask(TaskID) returns (TaskAck);
  rpc StreamTaskLogs(TaskLogRequest) returns (stream LogChunk);
}

// Worker registration
message WorkerInfo {
  string worker_id = 1;
  string worker_ip = 2;
  double total_cpu = 3;
  double total_memory = 4;
  double total_storage = 5;
  double total_gpu = 6;
}

message MasterInfo {
  string master_id = 1;
  string master_address = 2; // e.g., "192.168.1.100:50051"
}

message RegisterAck {
  bool success = 1;
  string message = 2;
}

// Heartbeat with resource stats
message Heartbeat {
  string worker_id = 1;
  double cpu_usage = 2;
  double memory_usage = 3;
  double storage_usage = 4;
  repeated RunningTask running_tasks = 5;
  double gpu_usage = 6; // GPU utilization percentage
}

message RunningTask {
  string task_id = 1;
  double cpu_allocated = 2;
  double memory_allocated = 3;
  string status = 4; // running, paused, failed
  double gpu_allocated = 5;
}

message HeartbeatAck { bool success = 1; }

// Task assignment
message Task {
  string task_id = 1;
  string docker_image = 2;
  string command = 3;
  double req_cpu = 4;
  double req_memory = 5;
  double req_storage = 6;
  double req_gpu = 7;
  string target_worker_id = 8;
  string user_id = 9; // User who submitted the task
  double sla_multiplier = 10; // SLA multiplier (k), range: 1.5-2.5, default: 2.0
  string task_type = 11; // Task type: cpu-light, cpu-heavy, memory-heavy, gpu-inference, gpu-training, mixed
  string task_name = 12;   // User-defined task name
  int64 submitted_at = 13; // Unix timestamp when task was submitted
}

message TaskAck {
  bool success = 1;
  string message = 2;
}

// Task completion
message TaskResult {
  string task_id = 1;
  string worker_id = 2;
  string status = 3; // success/failure
  string logs = 4;
  string result_location = 5; // Local path on worker where files are stored
  repeated string output_files =
      6; // List of output file paths relative to result_location
}

message Ack {
  bool success = 1;
  string message = 2;
}

// TaskID helper
message TaskID { string task_id = 1; }

// Task log streaming
message TaskLogRequest {
  string task_id = 1;
  string user_id = 2; // For authorization
  bool follow = 3;    // If true, stream live logs; if false, return stored logs
}

message LogChunk {
  string task_id = 1;
  string content = 2;   // Log content
  string timestamp = 3; // ISO 8601 timestamp
  bool is_complete = 4; // True when task is finished and no more logs
  string status = 5;    // Task status: running, completed, failed
}

// File transfer
message FileChunk {
  string task_id = 1;
  string user_id = 2;
  string task_name = 3;
  string file_path =
      4;          // Relative path of the file (e.g., "output/result.json")
  bytes data = 5; // File chunk data
  bool is_last_chunk = 6; // True if this is the last chunk of current file
  bool is_last_file = 7;  // True if this is the last file in the upload
  int64 timestamp = 8;    // Task submission timestamp
}

message FileUploadAck {
  bool success = 1;
  string message = 2;
  int32 files_received = 3;
}
